color fix and ad create page ad type option visible

--- a/public/asset/css/custom.css
+++ b/public/asset/css/custom.css
@@ -54,10 +54,10 @@
 	font-size: 1rem;
 }
 .bg-navy-blue {
-    background-color: #052755;
+    background-color: #013668;
 }
 .bg-navy-blue-forced {
-    background-color: #052755 !important;
+    background-color: #013668 !important;
 }
 .bg-white{
 	background-color: #fff ;
